Fixed table alignment

--- a/css/other.css
+++ b/css/other.css
@@ -76,6 +76,6 @@ h1 {
   margin-bottom: 25px;
 }
 
-table {
+.center-table {
   text-align: center;
 }
